# aoc2021

./: README.md
day-01/: Main.hs  day-01.cabal  flake.nix  solution.cabal
day-02/: Main.hs  day-02.cabal  flake.nix  solution.cabal
day-03/: Main.hs  day-03.cabal  flake.nix
day-04/: Main.hs  flake.nix
day-05/: Main.hs
day-06/: Main.hs
day-07/: Main.hs
day-08/: Main.hs
day-09/: Main.hs
day-10/: Main.hs
day-11/: Main.hs  solution.cabal
day-12/: Main.hs  solution.cabal
day-13/: Main.hs
day-14/: Main.hs  solution.cabal
day-15/: Main.hs  solution.cabal
day-16/: Main.hs
day-17/: Main.hs
day-18/: Main.hs
day-19/: Main.hs
day-20/: Main.hs  solution.cabal
day-21/: Main.hs
day-22/: Main.hs
day-23/: Main.hs  solution.cabal
day-template/: day-00.cabal  flake.nix  solution.cabal
