cabal-version:      2.4
name:               solution
version:            0.0.1.0

executable solution
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, parsec ^>=3.1.14.0, text ^>=1.2.4.1, matrix ^>=0.3.6.1, containers ^>=0.6.5.1, vector, comonad, adjunctions, distributive
    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        ScopedTypeVariables
