cabal-version:      2.4
name:               aoc
version:            0.0.1.0

executable day-00
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, parsec ^>=3.1.14.0, text ^>=1.2.4.1
    hs-source-dirs:   .
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        ScopedTypeVariables
